--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,19 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
 </head>
 <body>
   <app-root></app-root>
+  <script>
+    function init() {
+      var input = document.getElementById('locationTextField');
+      var autocomplete = new google.maps.places.Autocomplete(input);
+    }
+
+    google.maps.event.addDomListener(window, 'load', init);
+
+    console.dir(init);
+  </script>
 </body>
 </html>
